fixed FAQ + sign not showing (link to images folder)

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -557,7 +557,7 @@ main {
 }
 
 .accordion__label::after {
-    content: url('assets/add-symbol.svg');
+    content: url('../images/add-symbol.svg');
     position: absolute;
     right: 1.5em;
     background-size: contain;
